[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/art/monochrome_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/Player/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/resources/WorldEnviorment.tres" type="Environment" id=5]
[ext_resource path="res://assets/art/pleasure.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/FONT1.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/scenes/Player/Dialouge.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.47109, 8.34979 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.439216, 0.0980392, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=4]
ProgressBar/colors/font_color = Color( 1, 1, 1, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 2 )
ProgressBar/styles/fg = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0.145098, 0.145098, 0.145098, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Ghost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0117647 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0117647 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Ghost" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 431, 95, 16, 16 )

[node name="Alive" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 432, 16, 15, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="CameraShakeTimeout" type="Timer" parent="Camera2D"]
wait_time = 0.5

[node name="UI" type="Control" parent="Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -253.906
margin_top = -147.889
margin_right = -253.906
margin_bottom = -147.889
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Camera2D/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 182.0
margin_top = 282.0
margin_right = 326.0
margin_bottom = 294.0
rect_min_size = Vector2( 140, 12 )
theme = SubResource( 4 )
max_value = 3.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Control" parent="Camera2D/UI/ProgressBar"]
margin_left = 1.73859
margin_top = -12.3018
margin_right = 137.739
margin_bottom = -0.301819
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursed" type="Sprite" parent="Camera2D/UI/ProgressBar/Status"]
visible = false
position = Vector2( 69.906, -2.11099 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 608, 176, 15, 15 )

[node name="Regen" type="Sprite" parent="Camera2D/UI/ProgressBar/Status"]
visible = false
position = Vector2( 5.90601, -2.11099 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 656, 160, 15, 15 )

[node name="Posined" type="Sprite" parent="Camera2D/UI/ProgressBar/Status"]
visible = false
position = Vector2( 133.906, -2.11099 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 559, 176, 16, 15 )

[node name="Score" type="Label" parent="Camera2D/UI"]
margin_left = 125.906
margin_top = 275.889
margin_right = 177.906
margin_bottom = 289.889
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Holding" type="Control" parent="Camera2D/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Melee" type="Sprite" parent="Camera2D/UI/Holding"]
visible = false
position = Vector2( 341.906, 283.889 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 512, 96, 15, 15 )

[node name="Range" type="Sprite" parent="Camera2D/UI/Holding"]
visible = false
position = Vector2( 330.926, 287.085 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 592, 96, 15, 15 )

[node name="Spell" type="Sprite" parent="Camera2D/UI/Holding"]
visible = false
position = Vector2( 330.926, 287.085 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 512, 64, 15, 15 )

[node name="Throwable" type="Sprite" parent="Camera2D/UI/Holding"]
visible = false
position = Vector2( 330.926, 287.085 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 720, 144, 15, 15 )

[node name="pleasure" type="Control" parent="Camera2D/UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pleasure1" type="TextureRect" parent="Camera2D/UI/pleasure"]
modulate = Color( 1, 1, 1, 0.580392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 253.906
margin_top = 259.889
margin_right = 253.906
margin_bottom = 259.889
rect_scale = Vector2( -0.840482, 0.347886 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pleasure2" type="TextureRect" parent="Camera2D/UI/pleasure"]
modulate = Color( 1, 1, 1, 0.580392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 485.906
margin_top = 187.889
margin_right = 485.906
margin_bottom = 187.889
rect_rotation = -90.158
rect_scale = Vector2( -0.840482, 0.347886 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pleasure3" type="TextureRect" parent="Camera2D/UI/pleasure"]
modulate = Color( 1, 1, 1, 0.580392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 13.906
margin_top = 187.889
margin_right = 13.906
margin_bottom = 187.889
rect_rotation = 90.0
rect_scale = Vector2( -0.840482, 0.347886 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pleasure4" type="TextureRect" parent="Camera2D/UI/pleasure"]
modulate = Color( 1, 1, 1, 0.580392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 253.906
margin_top = 35.889
margin_right = 253.906
margin_bottom = 35.889
rect_rotation = 180.0
rect_scale = Vector2( -0.840482, 0.347886 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialouge" type="Control" parent="Camera2D/UI" groups=[
"DiaUI",
]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dia_Background" type="ColorRect" parent="Camera2D/UI/Dialouge"]
margin_left = 14.0
margin_top = 212.0
margin_right = 494.0
margin_bottom = 292.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dia_Text" type="RichTextLabel" parent="Camera2D/UI/Dialouge"]
margin_left = 22.0
margin_top = 220.0
margin_right = 486.0
margin_bottom = 284.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]this is a test text[/center]"
text = "this is a test text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesContainer" type="Control" parent="Camera2D/UI/Dialouge"]
margin_left = 62.0
margin_top = 212.0
margin_right = 446.0
margin_bottom = 284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/UI/Dialouge/ChoicesContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 384, 72 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="Camera2D"]
environment = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 6 )

[node name="ProtectionTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.9

[node name="Tween" type="Tween" parent="."]
[connection signal="altgivespell" from="." to="." method="_on_Player_altgivespell"]
[connection signal="givespell" from="." to="." method="_on_Player_givespell"]
[connection signal="updateuiremotly" from="." to="." method="_on_Player_updateuiremotly"]
[connection signal="timeout" from="Camera2D/CameraShakeTimeout" to="Camera2D" method="_on_CameraShakeTimeout_timeout"]
[connection signal="StartDialougRemotely" from="Camera2D/UI/Dialouge" to="Camera2D/UI/Dialouge" method="_on_Dialouge_StartDialougRemotely"]
[connection signal="timeout" from="ProtectionTimer" to="." method="_on_ProtectionTimer_timeout"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
